WIP on toggle button

--- a/addon/webextension/manifest.json.template
+++ b/addon/webextension/manifest.json.template
@@ -31,13 +31,13 @@
     "scripts": [
       "makeUuid.js",
       "catcher.js",
+      "background/selectorLoader.js",
       "background/communication.js",
       "background/auth.js",
       "background/senderror.js",
       "build/raven.js",
       "build/shot.js",
       "build/defaultSentryDsn.js",
-      "background/loadSelector.js",
       "background/analytics.js",
       "background/deviceInfo.js",
       "background/takeshot.js",
